* Read and compares checksum (DATASUM and CHECKSUM) if present in the FITS header (!723)
* Added a new cosmetic filter to remove purple fringing on bright stars (!726)
* Added blending masks and normalization on overlaps for rejection stacking, to stitch mosaics (!764)
* Added python scripting (!765)
* Added local annotations catalogues for IAU constellations lines and names (!800)

**Improvements:**
* Allowed object search with their common name, from the annotations catalogues (!381)
* Improved RGB composition tool to do full homography registration (#943)
* Reduced verbosity of script reload logging (#1217)
* Added more configurable colors for some overlays (#1230)
* Improved SEQHEADER command. Ability to print several keywords and new filter option (#1161)
* Refactored the keywords use (#668)
* Changed convention to Counterclokwise for the angle reported by astrometry (#1290)
* Split Astrometry from (S)PCC
* Changed max framing mode to avoid large black borders after registration, this is now handled at stacking step (!670)
* Optimised GHT code (~2x speedup) and fixed associated bugs (#1194, #1314, #1319)
* Improved interaction of threaded functions and previews with ROI code (!701)
* Optimised and refactored deconvolution code (!702 and !753)
* Updated Image processing menu (!700)
* Refactored registration processes and GUI (#1285)
* Improved use of prngs (mt19937 now used throughout in place of rand() etc.) (!689)
* Refactored networking code, add offline mode and add Gaia archive status indication (!687)
* Improved the usability of merging CFA sequences (!759)
* Allowed the token $T to be used in PixelMath (!768)
* Make PixelMath follows bit depth preferences (#1100)
* Allow background removal from CFA images / sequences, for better integration into drizzle workflow (!777)
* Added an option to save the stack result in 32b irrespective of the Preferences (#1165)